Fri Sep  3 21:52:09 CEST 1999  Marc Lehmann <pcg@goof.com>

	* data/patterns/corkboard.pat: replaced by the version
        famrom@idecnet.com sent me.
	* app/tool_options.c: fix typoo.

1999-09-04  Tor Lillqvist  <tml@iki.fi>

	* plug-ins/script-fu/interp_sliba.c (lreadstring): Fix own braino:
	Use max three octal digits, not four.

Thu Sep  2 23:26:36 PDT 1999 Manish Singh <yosh@gimp.org>

	* libgimp/Makefile.am: install parasiteio.h

Thu Sep  2 17:13:16 PDT 1999 Manish Singh <yosh@gimp.org>

	* app/gtkvwrapbox.[ch]: new vwrapbox stuff

	* app/Makefile.am: added new files

	* app/interface.c: place the indicator areas in a vwrapbox. Still
	kinda screwy tho.

Thu Sep  2 22:54:39 BST 1999 Adam D. Moss <adam@gimp.org>

	* gimp1_1_splash.ppm: Splash!  Aa-ahhh!  He saved every one of us!

Thu Sep  2 22:58:13 MEST 1999  Sven Neumann <sven@gimp.org>

	* app/brush_select.c: fixed a stupid bug I introduced today.
	* app/gimpcontextpreview.c: for consistency, do it the same way here.

1999-09-02  Tor Lillqvist  <tml@iki.fi>

	* plug-ins/script-fu/interp_sliba.c (lreadstring): Accept what
	g_strescape throws at us (specifically, octal sequences that start
	with any octal digit, and are at most three octal digits long).

	* app/makefile.{cygwin,msc}: Update.

Thu Sep  2 22:31:11 MEST 1999  Sven Neumann <sven@gimp.org>

	* plug-ins/gap/gap_lib.[ch]
	* plug-ins/gap/gap_main.c
	* plug-ins/gap/gap_mov_dialog.c
	* plug-ins/gap/gap_mpege.c
	* plug-ins/gap/gap_range_ops.c
	* plug-ins/gap/gap_split.c: applied patches from the GAP author
	Wolfgang Hofer:

	- Simplified naming convention for AnimFrames: under_score isn't
  	  mandatory anymore.
	- gimp_file_save is called INTERACTIVE on first call and 
       	  RUN_WITH_LAST_VALUES later.

Thu Sep  2 11:51:02 PDT 1999 Manish Singh <yosh@gimp.org>

	* app/gtkhwrapbox.[ch]
	* app/gtkwrapbox.[ch]: sync from gle

	* app/inteface.c: set allow_shrink on the toolbox window, use
	gtk_hwrap_box_new
